<resources>
    <string name="app_name">Shifa</string>
    <string name="title_phr">[ Personal Health Record ]</string>
    <string name="title_enter_your_civil_id">Enter Civil ID</string>
    <string name="title_get_otp">Get OTP</string>
    <string name="title_enter_otp">Enter OTP</string>
    <string name="alert_empty_field">This field can not be empty! </string>
    <string name="title_login">Login</string>
    <string name="title_accept">Accept</string>
    <string name="title_decline">Decline</string>
    <string name="title_procedures_reports">Procedures Reports</string>
    <string name="title_lab_results">Lab Investigations</string>
    <string name="title_allergy">Allergy</string>
    <string name="title_appointments">Appointments</string>
    <string name="title_notification">Notification</string>
    <string name="title_logout">Logout</string>
    <string name="alert_no_connection">Check your internet connection and try again.</string>
    <string name="title_pending">Pending</string>
    <string name="title_select_institute">Select Institute</string>
    <string name="title_institute_search">Institute name</string>
    <string name="title_institutes">Institutes</string>
    <string name="title_other_document">Documents</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_home">Home</string>
    <string name="title_dependents">Dependents</string>
    <string name="img_desc_back_icon">back button icon</string>
    <string name="img_desc_logo">Logo</string>
    <string name="img_desc_moh_logo">MOH Logo</string>
    <string name="img_desc_dgit_logo">DGIT Logo</string>
    <string name="title_recent">Recent</string>
    <string name="title_vital_signs">Vital Signs</string>
    <string name="title_appointments_date_and_time">Appointments Date and Time</string>
    <string name="alert_not_available">Not Available</string>
    <string name="title_select_department">Select Department</string>
    <string name="title_select_clinic">Select Clinic</string>
    <string name="title_remarks">Remarks</string>
    <string name="title_appointment_confirm_message">Are you sure you want to request for an appointment on</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_referrals">Referrals</string>
    <string name="title_reschedule">Reschedule</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_reason">Reason</string>
    <string name="title_appointment_cancel_message">Are you sure that you want to cancel the following appointment :</string>
    <string name="alert_cancellation">Please write a reason for cancellation</string>
    <string name="title_reschedule_label">Select your new preferred schedule</string>
    <string name="default_notification_channel_id" translatable="false">Chat</string>
    <string name="default_notification_channel_name" translatable="true">Chat</string>
    <string name="channel_chat">Chat</string>
    <string name="channel_chat_desc">This is chat channel, you can enable/disable chat notification using this channel.</string>
    <string name="channel_lab">Lab</string>
    <string name="channel_appointment">Appointments</string>
    <string name="channel_lab_desc">This is lab results channel, you can enable/disable lab results notification using this channel.</string>
    <string name="channel_appointment_desc">This is lab results channel, you can enable/disable lab results notification using this channel</string>
    <string name="hint_search">Search</string>
    <string name="title_range">Range</string>
    <string name="title_unit">Unit</string>
    <string name="title_value">Value</string>
    <string name="title_component">Component</string>
    <string name="title_media">Media</string>
    <string name="alert_dont_show_again">Do not show again</string>
    <string name="title_all">All</string>
    <string name="title_history">Medical History</string>
    <string name="title_problem">Final Diagnosis</string>
    <string name="no_allergy_msg">No Allergy.</string>
    <string name="no_history_msg">No History.</string>
    <string name="no_problem_msg">No Problems.</string>
    <string name="report_feild">Report</string>
    <string name="released_by_feild">Released By:</string>
    <string name="released_date_feild">Released Date:</string>
    <string name="status_feild">Status:</string>
    <string name="hospital_feild">Health Institutes:</string>
    <string name="ordered_by_feild">Ordered By:</string>
    <string name="ordered_date_feild">Ordered Date:</string>
    <string name="immunization_given">Given</string>
    <string name="immunization_schedule">Schedule</string>
    <string name="summary">Summary</string>
    <string name="doc_provider">Health Institutes</string>
    <string name="doc_self">Personal</string>
    <string name="delete_doc_msg">Are you sure you want to delete this Document ?</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="uploaded_docs">Uploaded Documents</string>
    <string name="publish_doc_msg">Are you sure you want to publish to doctor?</string>
    <string name="unpublish_doc_msg">Are you sure you want to unpublish?</string>
    <string name="select_doc_type_msg">Please Select the Document Type.</string>
    <string name="enter_reference_msg">Please Enter the Reference</string>
    <string name="enter_remark_msg">Please Enter the Remarks</string>
    <string name="select_file_msg">Please Select a File to upload !</string>
    <string name="hrd_imp">NOTE</string>
    <string name="hrd_med">MED</string>
    <string name="hrd_lab">LAB</string>
    <string name="hrd_rad">RAD</string>
    <string name="hrd_proc">PROC</string>
    <string name="enter_msg_chat">Type something …</string>
    <string name="health_records_result_found">results found in</string>
    <string name="results_found">results found!</string>
    <string name="health_education">Health Education</string>
    <string name="find_pharmacy">Find Pharmacy</string>
    <string name="ask_doctor">Ask Doctor</string>
    <string name="forms">Forms</string>
    <string name="heath_facilities">Heath Facilities</string>
    <string name="no_notification">No Notification.</string>
    <string name="cancel_done_msg">Cancellation Done</string>
    <string name="upload">Upload</string>
    <string name="too_large_file">Too Large File !</string>
    <string name="upload_an_image">Upload an Image</string>
    <string name="reference">Reference*</string>
    <string name="remark">Remark*</string>
    <string name="file_name">File Name</string>
    <string name="confirm_logout_msg">Are you sure you want to logout?</string>
    <string name="success_upload_msg">File Uploaded Successfully.</string>
    <string name="success_publish_msg">File Published Successfully.</string>
    <string name="success_delete_msg">File Deleted Successfully.</string>
    <string name="success_notification_delete_msg">Notification Deleted Successfully.</string>
    <string name="success_unpublish_msg">File UnPublished Successfully.</string>
    <string name="after_10_days">After 10 days</string>
    <string name="after_15_days">After 15 days</string>
    <string name="after_20_days">After 20 days</string>
    <string name="after_25_days">After 25 days</string>
    <string name="after_30_days">After 30 days</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="no_record_found">No Record Found.</string>
    <string name="active">Active</string>
    <string name="phr_feedback">PHR Feedback</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="edd_calculator">EDD Calculator</string>
    <string name="submit">Submit</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_mobile_no">Enter Your Mobile No *</string>
    <string name="feedback_saved_msg">Thank you for your Feedback.</string>
    <string name="at">at</string>
    <string name="not_given_msg">Not yet given.</string>
    <string name="given_msg">Given On</string>
    <string name="delete_notification_msg">Are you sure that you want to delete this notification?</string>
    <string name="invalid_email">Your Email Id is Invalid.</string>
    <string name="invalid_phoneNo">Your Mobile Number is Invalid.</string>
    <string name="select_time_slot">Select Time slot</string>
    <string name="no_dependents_record_found">No dependents records available.</string>
    <string name="department_label">Department:</string>
    <string name="no_appointment_msg">No Appointment Scheduled.</string>
    <string name="no_refferals">No Referrals</string>
    <string name="patients_rights">Patients Rights</string>
    <string name="publish">Publish</string>
    <string name="about_the_app">About The App</string>
    <string name="about_app_info">Shifa App is developed by Ministry of Health - DGIT.  This BETA version of the app allows all users with a valid civil ID and registered Oman mobile number with health institutions, to view their own medical record and information.</string>
    <string name="ok">OK</string>
    <string name="sub_title_phr">Your Personal Health Record Wallet</string>
    <string name="time_to_immunization">Date of vaccination for</string>
    <string name="location">Oman</string>
    <string name="go_for_vaccination">You must go to nearest health center to take this vaccination.</string>
    <string name="language">Language</string>
    <string name="title_select_relation">Relation*</string>
    <string name="title_update">Update</string>
    <string name="other_commets">Other Comments..</string>
    <string name="name_of_the_family_member_aware_of_your_wish"><font size="10">Name of the family member aware of your wish*</font></string>
    <string name="oragen_statment">I with below details express my wish to donate my organs after death to be implanted for a patient in need</string>
    <string name="mobile_no_of_the_family_member">Mobile No. of the family member*</string>
    <string name="select_relation_msg">Please select the relation !</string>
    <string name="liver">Liver</string>
    <string name="heart">Heart</string>
    <string name="lungs">Lungs</string>
    <string name="pancreas">Pancreas</string>
    <string name="corneas">Corneas</string>
    <string name="all_organs">All organs</string>
    <string name="kidneys">Kidneys</string>
    <string name="organ_donated">Organ donated</string>
    <string name="save">Save</string>
    <string name="unread_messages">Chats</string>
    <string name="no_medical_history">There are no allergy records,medical history, or final diagnosis recorded for you</string>
    <string name="msg_no_vital">There is no data recorded for this vital</string>
    <string name="visit_details">Visit Details</string>
    <string name="completed">Completed</string>
    <string name="take_medicine">Take</string>
    <string name="no_visit_details">There is no visit details</string>
    <string name="add_new_document">Add New Document</string>
    <string name="no_recodrs_dialog">There are no records found</string>
    <string name="no_records_lab_all">No lab investigationss are available for you</string>
    <string name="no_records_lab_recent">No recent lab investigations available</string>
    <string name="no_records_lab_encounter">No lab investigations found for this visit</string>
    <string name="no_records_med_all">No prescriptions are available for you</string>
    <string name="no_records_med_recent">"No recent prescriptions available"</string>
    <string name="no_records_med_encounter">No prescriptions found for this visit</string>
    <string name="no_records_rad">No radiology orders found for this visit</string>
</resources>