<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/phr_logo"
                android:contentDescription="@string/img_desc_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="35dp"
                android:text="@string/title_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_get_otp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/space_0"
                android:layout_height="40dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/rounded_shape"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/title_login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_otp" />

            <Button
                android:id="@+id/btn_get_otp"
                android:layout_width="@dimen/space_0"
                android:layout_height="40dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/rounded_shape"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/title_get_otp"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiet_civil_id" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="35dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiet_civil_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_otp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edit_text_round"
                    android:gravity="center"
                    android:hint="@string/title_enter_otp"
                    android:imeOptions="actionDone"
                    android:inputType="numberPassword"
                    android:paddingStart="@dimen/space_24"
                    android:paddingEnd="@dimen/space_24" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_phr_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_civil_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/edit_text_round"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:hint="@string/title_enter_your_civil_id"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingStart="@dimen/space_24"
                android:paddingEnd="@dimen/space_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phr_title2" />

            <TextView
                android:id="@+id/tv_phr_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                android:text="@string/title_phr"
                android:textAllCaps="true"
                android:textColor="@color/colorSecendary"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phr_label" />

            <TextView
                android:id="@+id/tv_phr_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title_phr"
                android:textAllCaps="false"
                android:textColor="@color/colorSecendary"
                android:textSize="9sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phr_title" />

            <ImageView
                android:id="@+id/iv_logo_digit"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/img_desc_dgit_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_logo_moh"
                app:layout_constraintTop_toBottomOf="@+id/tv_cancel"
                app:srcCompat="@drawable/logo_img_dgit" />

            <ImageView
                android:id="@+id/iv_logo_moh"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/img_desc_moh_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_logo_digit"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cancel"
                app:srcCompat="@drawable/logo_img_moh" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <!--  <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_0"
        android:layout_marginStart="@dimen/space_8"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginEnd="@dimen/space_8"
        android:layout_marginBottom="@dimen/space_8"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_otp">-->

    <!-- </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>