<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".dialogfragments.SaveAppointmentDialogFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_remarks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_remarks"
            android:inputType="textMultiLine"
            android:maxHeight="128dp" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBackground"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/title_confirm"
        android:textAllCaps="false"
        android:textColor="@color/colorGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_remarks" />

    <Button
        android:id="@+id/btn_decline"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/colorBackground"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/title_decline"
        android:textAllCaps="false"
        android:textColor="@color/colorRed"
        app:layout_constraintBottom_toBottomOf="@+id/btn_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_confirm" />

    <TextView
        android:fontFamily="@font/roboto_regular"
        android:id="@+id/tv_confirm_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title_appointment_confirm_message"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>